infrastructure/waddle.cloud/gitops/waddle-server/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: gateway-to-waddle
  namespace: waddle
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: waddle
  to:
    - group: ""
      kind: Service
