infrastructure/waddle.cloud/gitops/waddle-server/httproute-http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: waddle-server-http-redirect
  namespace: waddle
spec:
  parentRefs:
    - name: waddle-gateway
      namespace: default
      sectionName: http-xmpp
  hostnames:
    - xmpp.waddle.chat
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
