infrastructure/waddle.cloud/gitops/waddle-server/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: waddle-server
  namespace: waddle
spec:
  parentRefs:
    - name: waddle-gateway
      namespace: default
      sectionName: https-xmpp
  hostnames:
    - xmpp.waddle.social
  rules:
    - backendRefs:
        - name: waddle-server
          port: 3000
